--- a/src/components/WebsitePlusMobileSection/WebsitePlusMobileSection.scss
+++ b/src/components/WebsitePlusMobileSection/WebsitePlusMobileSection.scss
@@ -39,12 +39,27 @@
   }
 
   &__title {
-    @include title;
+    color: $black-color;
+    font-family: $font-spoof-trail;
+    font-size: 50px;
+    font-style: normal;
+    font-weight: 700;
+    line-height: 60px;
+
+    span {
+      border-radius: 22px;
+      background: $yellow-color;
+      padding: 0 10px;
+    }
   }
 
   &__description {
-    @include description;
+    color: $black-color;
+    text-align: center;
+    font-family: $font-spoof-trail;
     font-size: 32px;
+    font-style: normal;
+    font-weight: 400;
     line-height: 45px;
   }
 
