--- a/src/components/Theme/Theme.scss
+++ b/src/components/Theme/Theme.scss
@@ -52,13 +52,19 @@
     }
 
     &__title {
-      @include title;
       color: $black-color;
       font-family: $font-spoof-trail;
-      font-size: 45px;
+      font-size: 50px;
       font-style: normal;
       font-weight: 700;
+      line-height: 60px;
       text-align: left;
+
+      span {
+        border-radius: 22px;
+        background: $yellow-color;
+        padding: 0 10px;
+      }
     }
 
     &__description {
