--- a/src/components/WebsitePlusMobileSection/WebsitePlusMobileSection.scss
+++ b/src/components/WebsitePlusMobileSection/WebsitePlusMobileSection.scss
@@ -130,10 +130,7 @@
     transform: translate(0, 80px);
 
     img {
-      border-radius: 40px 40px 0px 0px;
-      box-shadow: 0px -2px 16px 1px rgba(0, 0, 0, 0.47);
-      -webkit-box-shadow: 0px -2px 16px 1px rgba(0, 0, 0, 0.47);
-      -moz-box-shadow: 0px -2px 16px 1px rgba(0, 0, 0, 0.47);
+      @include thinShadow;
     }
   }
 }
