--- a/src/components/AccordionSection/AccordionSection.scss
+++ b/src/components/AccordionSection/AccordionSection.scss
@@ -21,23 +21,17 @@
   }
 
   &__title {
-    text-align: left;
-  }
-
-  &__link {
     color: $black-color-alt;
     font-family: $font-spoof-trail;
     font-size: 50px;
     font-style: normal;
     font-weight: 800;
     line-height: 60px;
-    margin: 8px 0 0 0;
+    text-align: left;
+  }
 
-    span {
-      border-radius: 22px;
-      background: $yellow-color;
-      padding: 0 10px;
-    }
+  &__link {
+    @include buttonBlue;
   }
 
   &__list {
@@ -51,11 +45,9 @@
   }
 
   &__button {
+    @include thinnerShadow;
     background-color: $white-color-opacity;
     border-radius: 30px;
-    box-shadow: 0px 4px 8px -4px rgba(0, 0, 0, 0.47);
-    -webkit-box-shadow: 0px 4px 8px -4px rgba(0, 0, 0, 0.47);
-    -moz-box-shadow: 0px 4px 8px -4px rgba(0, 0, 0, 0.47);
     display: flex;
     flex-direction: column;
     min-height: 80px;
@@ -64,12 +56,6 @@
     padding: 24px;
     transition: all 830ms linear;
     width: 100%;
-
-    &:hover {
-      box-shadow: 0px 4px 8px 0px rgba(0, 0, 0, 0.47);
-      -webkit-box-shadow: 0px 4px 8px 0px rgba(0, 0, 0, 0.47);
-      -moz-box-shadow: 0px 4px 8px 0px rgba(0, 0, 0, 0.47);
-    }
 
     &-title {
       align-items: center;
