--- a/src/components/AnimatedCard/AnimatedCard.scss
+++ b/src/components/AnimatedCard/AnimatedCard.scss
@@ -31,10 +31,8 @@
 @import "./ManWithSPeaker";
 
 .animated-card {
+  @include lightShadow;
   border-radius: 24px;
-  box-shadow: 0px 3px 8px 0px rgba(0, 0, 0, 0.47);
-  -webkit-box-shadow: 0px 3px 8px 0px rgba(0, 0, 0, 0.47);
-  -moz-box-shadow: 0px 3px 8px 0px rgba(0, 0, 0, 0.47);
   display: flex;
   height: 500px;
   min-height: 100%;
