--- a/src/components/AnimatedCard/Assets/LogoInCircleAsset.scss
+++ b/src/components/AnimatedCard/Assets/LogoInCircleAsset.scss
@@ -2,12 +2,10 @@
 @import "../../../styles/mixins";
 
 .logo-in-circle-asset {
+  @include lightShadow;
   align-items: center;
   background-color: $white-color;
   border-radius: 50%;
-  box-shadow: 0px 3px 8px 0px rgba(0, 0, 0, 0.47);
-  -webkit-box-shadow: 0px 3px 8px 0px rgba(0, 0, 0, 0.47);
-  -moz-box-shadow: 0px 3px 8px 0px rgba(0, 0, 0, 0.47);
   display: flex;
   justify-content: center;
   padding: 15px;
