--- a/src/components/AnimatedCard/BuiltForGrowth.scss
+++ b/src/components/AnimatedCard/BuiltForGrowth.scss
@@ -10,22 +10,18 @@
   }
 
   &--2 {
+    @include lightShadow;
     max-width: 380px;
     right: 0;
     bottom: 0;
     border-radius: 19px 0 0 0;
-    box-shadow: 0px 3px 8px 0px rgba(0, 0, 0, 0.47);
-    -webkit-box-shadow: 0px 3px 8px 0px rgba(0, 0, 0, 0.47);
-    -moz-box-shadow: 0px 3px 8px 0px rgba(0, 0, 0, 0.47);
     z-index: 2;
   }
 
   &--3 {
+    @include lightShadow;
     bottom: -20px;
     border-radius: 40px;
-    box-shadow: 0px 3px 8px 0px rgba(0, 0, 0, 0.47);
-    -webkit-box-shadow: 0px 3px 8px 0px rgba(0, 0, 0, 0.47);
-    -moz-box-shadow: 0px 3px 8px 0px rgba(0, 0, 0, 0.47);
     max-width: 350px;
     overflow: hidden;
     left: -20px;
