--- a/src/components/AnimatedCard/Hassle.scss
+++ b/src/components/AnimatedCard/Hassle.scss
@@ -3,11 +3,9 @@
 
 @mixin hassle {
   &--1 {
+    @include lightShadow;
     border-radius: 20px 20px 0 0;
     bottom: -30px;
-    box-shadow: 0px 3px 16px -2px rgba(0, 0, 0, 0.47);
-    -webkit-box-shadow: 0px 3px 16px -2px rgba(0, 0, 0, 0.47);
-    -moz-box-shadow: 0px 3px 16px -2px rgba(0, 0, 0, 0.47);
     max-width: 500px;
     right: 0;
   }
@@ -19,11 +17,9 @@
   }
 
   &--3 {
+    @include lightShadow;
     border-radius: 20px 0 0 20px;
     bottom: 30px;
-    box-shadow: 0px 3px 16px -2px rgba(0, 0, 0, 0.47);
-    -webkit-box-shadow: 0px 3px 16px -2px rgba(0, 0, 0, 0.47);
-    -moz-box-shadow: 0px 3px 16px -2px rgba(0, 0, 0, 0.47);
     max-width: 180px;
     right: -20px;
     z-index: 1;
