--- a/src/components/AnimatedCard/OngoingUpdates.scss
+++ b/src/components/AnimatedCard/OngoingUpdates.scss
@@ -6,9 +6,7 @@
   &--2,
   &--3,
   &--4 {
-    box-shadow: 0px 3px 8px -2px rgba(0, 0, 0, 0.47);
-    -webkit-box-shadow: 0px 3px 8px -2px rgba(0, 0, 0, 0.47);
-    -moz-box-shadow: 0px 3px 8px -2px rgba(0, 0, 0, 0.47);
+    @include lightShadow;
   }
 
   &--1 {
