--- a/src/components/AnimatedCard/SmartControl.scss
+++ b/src/components/AnimatedCard/SmartControl.scss
@@ -15,11 +15,9 @@
   }
 
   &--3 {
+    @include lightShadow;
     bottom: -20px;
     border-radius: 40px;
-    box-shadow: 0px 3px 8px 0px rgba(0, 0, 0, 0.47);
-    -webkit-box-shadow: 0px 3px 8px 0px rgba(0, 0, 0, 0.47);
-    -moz-box-shadow: 0px 3px 8px 0px rgba(0, 0, 0, 0.47);
     max-width: 350px;
     overflow: hidden;
     left: -20px;
