--- a/src/components/Header/Dropdown/Dropdown.scss
+++ b/src/components/Header/Dropdown/Dropdown.scss
@@ -2,13 +2,11 @@
 @import "../../../styles/mixins";
 
 .dropdown {
+  @include lightShadow;
   align-items: flex-start;
   background-color: $white-color;
   border-radius: 16px;
   border: 1px solid $grey-color;
-  box-shadow: 0px 4px 10px -2px rgba(0, 0, 0, 0.55);
-  -webkit-box-shadow: 0px 4px 10px -2px rgba(0, 0, 0, 0.55);
-  -moz-box-shadow: 0px 4px 10px -2px rgba(0, 0, 0, 0.55);
   display: flex;
   left: 30px;
   overflow: hidden;
