--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -10,25 +10,7 @@
   z-index: 9991;
 
   &--is-scrolled {
-    box-shadow: 0px 1px 10px 2px rgba(0, 0, 0, 0.55);
-    -webkit-box-shadow: 0px 1px 10px 2px rgba(0, 0, 0, 0.55);
-    -moz-box-shadow: 0px 1px 10px 2px rgba(0, 0, 0, 0.55);
-
-    .header__container {
-      padding: 15px 10px;
-
-      @media screen and (min-width: 375px) {
-        padding: 15px 10px;
-      }
-
-      @media screen and (min-width: 425px) {
-        padding: 15px 15px;
-      }
-
-      @media screen and (min-width: 768px) {
-        padding: 15px 30px;
-      }
-    }
+    @include lightShadow;
   }
 
   &__container {
@@ -36,9 +18,21 @@
     align-items: center;
     background-color: $white-color;
     display: flex;
-    padding: 20px 10px;
+    padding: 15px 10px;
     transition: all 150ms linear;
     transition: padding 300ms $animation-2;
+
+    @media screen and (min-width: 375px) {
+      padding: 15px 10px;
+    }
+
+    @media screen and (min-width: 425px) {
+      padding: 15px 15px;
+    }
+
+    @media screen and (min-width: 768px) {
+      padding: 15px 30px;
+    }
   }
 
   &__logo {
@@ -109,42 +103,40 @@
     }
   }
 
-  &__buttons-list {
-    align-items: center;
-    display: flex;
-  }
+  &__buttons {
+    &-list {
+      align-items: center;
+      display: flex;
+      gap: 8px;
+    }
 
-  &__buttons-item {
-    button {
+    &-link {
+      @include thinShadow;
       color: $black-color;
-      background-color: transparent;
-      font-size: 16px;
+      background-color: $white-color;
+      border-radius: 90px;
       font-family: $font-spoof-trail;
+      font-size: 16px;
       font-weight: 500;
       height: 52px;
       line-height: 28px;
       padding: 12px 24px;
       transition: all 120ms ease-in-out;
       white-space: nowrap;
-    }
-
-    &:last-of-type button {
-      background-color: transparent;
-      border: 1px solid $black-color;
-      border-radius: 90px;
-      box-shadow: 0px 1px 10px 0px rgba(0, 0, 0, 0.55);
-      -webkit-box-shadow: 0px 1px 10px 0px rgba(0, 0, 0, 0.55);
-      -moz-box-shadow: 0px 1px 10px 0px rgba(0, 0, 0, 0.55);
-      transition: all 120ms ease-out;
 
       &:hover {
-        background-color: $blue-color;
-        border: 1px solid $blue-color;
-        box-shadow: 0px 1px 16px 2px rgba(0, 0, 0, 0.55);
-        -webkit-box-shadow: 0px 1px 16px 2px rgba(0, 0, 0, 0.55);
-        -moz-box-shadow: 0px 1px 16px 2px rgba(0, 0, 0, 0.55);
+        background-color: $black-color;
         color: $white-color;
         transform: scale(1.1);
+      }
+
+      &--sign-up {
+        border: 1px solid $black-color;
+
+        &:hover {
+          background-color: $blue-color;
+          border: 1px solid $blue-color;
+        }
       }
     }
   }
