--- a/src/components/IconCard/IconCard.scss
+++ b/src/components/IconCard/IconCard.scss
@@ -2,11 +2,9 @@
 @import "../../styles/mixins";
 
 .icon-card {
+  @include lightShadow;
   align-items: center;
   border-radius: 24px;
-  box-shadow: 0px 4px 8px 0px rgba(0, 0, 0, 0.47);
-  -webkit-box-shadow: 0px 4px 8px 0px rgba(0, 0, 0, 0.47);
-  -moz-box-shadow: 0px 4px 8px 0px rgba(0, 0, 0, 0.47);
   display: flex;
   flex-direction: column;
   height: 100%;
