--- a/src/components/ImageCard/ImageCard.scss
+++ b/src/components/ImageCard/ImageCard.scss
@@ -2,11 +2,9 @@
 @import "../../styles/mixins";
 
 .image-card {
+  @include thinShadow;
   background-color: $light-white-color;
   border-radius: 20px;
-  box-shadow: 0px 4px 8px 0px rgba(0, 0, 0, 0.47);
-  -webkit-box-shadow: 0px 4px 8px 0px rgba(0, 0, 0, 0.47);
-  -moz-box-shadow: 0px 4px 8px 0px rgba(0, 0, 0, 0.47);
   display: flex;
   flex-direction: column;
   height: 100%;
