--- a/src/components/Plan/Plan.scss
+++ b/src/components/Plan/Plan.scss
@@ -5,9 +5,7 @@
   border: 1px solid $yellow-color-alt;
   background: $cream-gradient-light;
   border-radius: 24px;
-  box-shadow: 0px 1px 8px 0px rgba(0, 0, 0, 0.47);
-  -webkit-box-shadow: 0px 1px 8px 0px rgba(0, 0, 0, 0.47);
-  -moz-box-shadow: 0px 1px 8px 0px rgba(0, 0, 0, 0.47);
+  @include thinShadow;
   overflow: hidden;
   width: 100%;
 
@@ -27,9 +25,7 @@
   }
 
   &__inner-container {
-    box-shadow: 0px 1px 8px -2px rgba(0, 0, 0, 0.47);
-    -webkit-box-shadow: 0px 1px 8px -2px rgba(0, 0, 0, 0.47);
-    -moz-box-shadow: 0px 1px 8px -2px rgba(0, 0, 0, 0.47);
+    @include thinShadow;
     background-color: $cream-color;
     border-radius: 24px;
   }
@@ -54,11 +50,9 @@
   }
 
   &__most-popular {
+    @include thinShadow;
     background-color: $red-color;
     border-radius: 0px 0px 8px 8px;
-    box-shadow: 0px 2px 8px -2px rgba(0, 0, 0, 0.47);
-    -webkit-box-shadow: 0px 2px 8px -2px rgba(0, 0, 0, 0.47);
-    -moz-box-shadow: 0px 2px 8px -2px rgba(0, 0, 0, 0.47);
     color: $white-color;
     left: 50%;
     padding: 4px 8px;
@@ -203,9 +197,7 @@
   }
 
   &__extra {
-    box-shadow: 0px 1px 8px -2px rgba(0, 0, 0, 0.47);
-    -webkit-box-shadow: 0px 1px 8px -2px rgba(0, 0, 0, 0.47);
-    -moz-box-shadow: 0px 1px 8px -2px rgba(0, 0, 0, 0.47);
+    @include thinShadow;
     background: $cream-gradient-dark;
     border-radius: 24px;
     display: grid;
