--- a/src/components/Slideshow/Slideshow.scss
+++ b/src/components/Slideshow/Slideshow.scss
@@ -26,12 +26,10 @@
   }
 
   &__item {
+    @include thinnerShadow;
     background-color: $grey-color;
     border: 18.5px solid $grey-color;
     border-radius: 24px;
-    box-shadow: 0px 4px 8px 0px rgba(0, 0, 0, 0.47);
-    -webkit-box-shadow: 0px 4px 8px 0px rgba(0, 0, 0, 0.47);
-    -moz-box-shadow: 0px 4px 8px 0px rgba(0, 0, 0, 0.47);
     height: 360px;
     margin: 0 15px;
     overflow: hidden;
