--- a/src/components/StepCardsSection/StepCardsSection.scss
+++ b/src/components/StepCardsSection/StepCardsSection.scss
@@ -7,12 +7,10 @@
   gap: 24px;
 
   .animated-card {
+    @include thinShadow;
     align-items: center;
     background-color: $grey-color;
     border-radius: 30px;
-    box-shadow: 0px 4px 8px 0px rgba(0, 0, 0, 0.47);
-    -webkit-box-shadow: 0px 4px 8px 0px rgba(0, 0, 0, 0.47);
-    -moz-box-shadow: 0px 4px 8px 0px rgba(0, 0, 0, 0.47);
     display: flex;
     flex-direction: column;
     justify-content: flex-end;
