--- a/src/components/Theme/Theme.scss
+++ b/src/components/Theme/Theme.scss
@@ -9,10 +9,8 @@
   }
 
   &-card {
+    @include lightShadow;
     border-radius: 24px;
-    box-shadow: 0px 3px 8px 0px rgba(0, 0, 0, 0.47);
-    -webkit-box-shadow: 0px 3px 8px 0px rgba(0, 0, 0, 0.47);
-    -moz-box-shadow: 0px 3px 8px 0px rgba(0, 0, 0, 0.47);
     height: 475px;
     min-height: 100%;
     overflow: hidden;
@@ -183,10 +181,8 @@
       z-index: 3;
 
       span {
+        @include regularShadow;
         border-radius: 50%;
-        box-shadow: 0px 3px 8px 0px rgba(0, 0, 0, 0.47);
-        -webkit-box-shadow: 0px 3px 8px 0px rgba(0, 0, 0, 0.47);
-        -moz-box-shadow: 0px 3px 8px 0px rgba(0, 0, 0, 0.47);
         height: 50px;
         overflow: hidden;
         transition: all 150ms ease-out;
