--- a/src/styles/_mixins.scss
+++ b/src/styles/_mixins.scss
@@ -1,5 +1,29 @@
 @import "./variables.scss";
 
+@mixin regularShadow {
+  box-shadow: 0px 3px 8px 0px rgba(0, 0, 0, 0.47);
+  -webkit-box-shadow: 0px 3px 8px 0px rgba(0, 0, 0, 0.47);
+  -moz-box-shadow: 0px 3px 8px 0px rgba(0, 0, 0, 0.47);
+}
+
+@mixin lightShadow {
+  box-shadow: 0px 3px 16px -4px rgba(0, 0, 0, 0.47);
+  -webkit-box-shadow: 0px 3px 16px -4px rgba(0, 0, 0, 0.47);
+  -moz-box-shadow: 0px 3px 16px -4px rgba(0, 0, 0, 0.47);
+}
+
+@mixin thinShadow {
+  box-shadow: 0px 2px 22px -6px rgba(0, 0, 0, 0.47);
+  -webkit-box-shadow: 0px 2px 22px -6px rgba(0, 0, 0, 0.47);
+  -moz-box-shadow: 0px 2px 22px -6px rgba(0, 0, 0, 0.47);
+}
+
+@mixin thinnerShadow {
+  box-shadow: 3px -4px 18px -10px rgba(0, 0, 0, 0.47);
+  -webkit-box-shadow: 3px 4px 18px -10px rgba(0, 0, 0, 0.47);
+  -moz-box-shadow: 3px -4px 18px -10px rgba(0, 0, 0, 0.47);
+}
+
 @mixin container {
   max-width: 1220px;
   margin: 0 auto;
@@ -20,12 +44,10 @@
 }
 
 @mixin button {
+  @include lightShadow;
   align-items: center;
   border: 0;
   border-radius: 90px;
-  box-shadow: 0px 1px 10px 0px rgba(0, 0, 0, 0.55);
-  -webkit-box-shadow: 0px 1px 10px 0px rgba(0, 0, 0, 0.55);
-  -moz-box-shadow: 0px 1px 10px 0px rgba(0, 0, 0, 0.55);
   display: flex;
   font-size: 10px;
   font-weight: 700;
@@ -43,9 +65,6 @@
   }
 
   &:hover {
-    box-shadow: 0px 1px 16px 2px rgba(0, 0, 0, 0.55);
-    -webkit-box-shadow: 0px 1px 16px 2px rgba(0, 0, 0, 0.55);
-    -moz-box-shadow: 0px 1px 16px 2px rgba(0, 0, 0, 0.55);
     transform: translate(-6px, 0);
     padding: 9px 9px 9px 12px;
 
