--- a/src/components/Content/Content.scss
+++ b/src/components/Content/Content.scss
@@ -51,6 +51,7 @@
     font-style: normal;
     font-weight: 700;
     line-height: 60px;
+    text-align: center;
 
     &--white {
       color: $white-color;
