feat: add plugins

--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -19,6 +19,7 @@ $red-color: #f2604b;
 $red-color-dark: #a46565;
 $red-color-light: #ffe1cb;
 $white-color: #ffffff;
+$white-color-light: #f8fafc;
 $white-color-opacity: #ffffff8c;
 $white-color-alt: #f0f0f0;
 $light-white-color: #f9faf5;
