--- a/src/components/IconCard/IconCard.scss
+++ b/src/components/IconCard/IconCard.scss
@@ -13,6 +13,10 @@
 
   &--align-left {
     align-items: flex-start;
+
+    * {
+      text-align: left !important;
+    }
   }
 
   &--white {
@@ -37,6 +41,10 @@
     * {
       color: $white-color !important;
     }
+  }
+
+  &--light-white {
+    background-color: $white-color-light;
   }
 
   &__icon svg,
