feat: resolve requested issues from pm

--- a/src/components/AnimatedCard/AnimatedCard.scss
+++ b/src/components/AnimatedCard/AnimatedCard.scss
@@ -34,16 +34,12 @@
   @include lightShadow;
   border-radius: 24px;
   display: flex;
+  flex-direction: column;
   height: 500px;
   min-height: 100%;
   overflow: hidden;
   position: relative;
   width: 100%;
-
-  > img {
-    opacity: 0;
-    width: 100%;
-  }
 
   &--light-white {
     background-color: $light-white-color !important;
@@ -73,8 +69,17 @@
     background: $grey-gradient !important;
   }
 
+  > img {
+    opacity: 0;
+    width: 100%;
+  }
+
   img {
     pointer-events: none;
+  }
+
+  &__workaround {
+    height: 0;
   }
 
   &__content {
@@ -84,8 +89,8 @@
     gap: 23px;
     height: calc(100% - 2 * 40px);
     padding: 40px;
-    position: absolute;
-    top: 0;
+    position: relative;
+    min-width: calc(100% - 2 * 40px);
     z-index: 20;
   }
 
@@ -99,9 +104,9 @@
     text-align: left;
 
     span {
-      border-radius: 22px;
-      background: $yellow-color;
+      @include animatedHighlight;
       padding: 0 10px;
+      line-height: 66px;
     }
   }
 
