--- a/src/components/AnimatedCard/TechnologyPartner.scss
+++ b/src/components/AnimatedCard/TechnologyPartner.scss
@@ -3,10 +3,11 @@
 
 @mixin technologyPartner {
   &--1 {
-    bottom: 0px;
-    right: 0;
-    max-width: 500px;
+    bottom: -150px;
+    right: -100px;
+    max-width: 800px;
     z-index: 1;
+    transform: scale(1.3) !important;
   }
 
   &--2 {
