--- a/src/components/CommonSection/CommonSection.scss
+++ b/src/components/CommonSection/CommonSection.scss
@@ -10,7 +10,7 @@
 
   &--offset {
     margin: 52px 0 0 0;
-    padding-top: 60px;
+    padding-top: 60px; // @LEROY: As small as possible
   }
 
   &--grey {
@@ -93,17 +93,16 @@
 
   &__title {
     color: $black-color;
-    text-align: center;
     font-family: $font-spoof-trail;
     font-size: 90px;
     font-style: normal;
     font-weight: 800;
+    justify-content: center;
     line-height: 110px;
-    overflow: hidden;
+    text-align: center;
 
     span {
-      border-radius: 22px;
-      background: $yellow-color;
+      @include animatedHighlight;
       padding: 0 10px;
     }
   }
@@ -118,8 +117,7 @@
     line-height: 60px;
 
     span {
-      border-radius: 22px;
-      background: $yellow-color;
+      @include animatedHighlight;
       padding: 0 10px;
     }
   }
