--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -27,8 +27,9 @@ $white-blue-color: #c7d7e8;
 $white-blue-color-dark: #d3d8de;
 $cream-color: #fff8da;
 $cream-color-light: #fff8b7;
-$purple-color: #d3bafe;
+$pink-color: #d3bafe;
 $green-color: #95edb2;
+$purple-color: #7968ed;
 
 $cream-gradient-dark: linear-gradient(0deg, #fff8b7 0%, #ffefb7 100%);
 $cream-gradient-light: linear-gradient(180deg, #fffbe7 0%, #fffcef 22.67%),
