--- a/src/components/Theme/Theme.scss
+++ b/src/components/Theme/Theme.scss
@@ -29,10 +29,14 @@
     }
 
     &--moo-chew {
-      background-color: $purple-color;
+      background-color: $pink-color;
     }
 
     &--marketplace {
+      background-color: $pink-color;
+    }
+
+    &--services {
       background-color: $purple-color;
     }
 
@@ -112,6 +116,12 @@
             left: -50px;
             top: 40px;
             max-width: 250px;
+          }
+
+          &--services {
+            right: -70px;
+            bottom: -150px;
+            max-width: 700px;
           }
         }
       }
