--- a/src/components/CommonSection/CommonSection.scss
+++ b/src/components/CommonSection/CommonSection.scss
@@ -9,8 +9,7 @@
   position: relative;
 
   &--offset {
-    margin: 52px 0 0 0;
-    padding-top: 60px; // @LEROY: As small as possible
+    padding-top: 30px;
   }
 
   &--grey {
