--- a/src/components/PartnersSection/PartnersSection.scss
+++ b/src/components/PartnersSection/PartnersSection.scss
@@ -18,6 +18,7 @@
     font-style: normal;
     font-weight: 700;
     line-height: 60px;
+    text-align: center;
 
     span {
       @include animatedHighlight;
