--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -30,6 +30,7 @@ $cream-color-light: #fff8b7;
 $pink-color: #d3bafe;
 $green-color: #95edb2;
 $purple-color: #7968ed;
+$purple-color-2: #8766d7;
 
 $cream-gradient-dark: linear-gradient(0deg, #fff8b7 0%, #ffefb7 100%);
 $cream-gradient-light: linear-gradient(180deg, #fffbe7 0%, #fffcef 22.67%),
