--- a/src/components/Footer/Footer.scss
+++ b/src/components/Footer/Footer.scss
@@ -3,6 +3,7 @@
 
 .footer {
   background-color: $grey-color;
+  transition: all 450ms $animation-2;
 
   &__container {
     @include container;
@@ -123,6 +124,7 @@
         font-style: normal;
         font-weight: 400;
         line-height: 24px;
+        text-wrap: nowrap;
         transition: all 120ms ease-in-out;
 
         &:hover {
