--- a/src/app/globals.scss
+++ b/src/app/globals.scss
@@ -7,6 +7,7 @@ footer > * {
 }
 
 body {
+  background-color: $grey-color;
   margin: 0;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
