feat: merge image-cards-with-content-section with common section

--- a/src/components/ImageCards/ImageCards.scss
+++ b/src/components/ImageCards/ImageCards.scss
@@ -13,13 +13,73 @@
       max-height: 350px;
 
       &__title {
-        font-size: 20px !important;
-        line-height: 26px !important;
+        font-size: 20px;
+        line-height: 26px;
       }
 
       &__description {
-        font-size: 14px !important;
-        line-height: 22px !important;
+        font-size: 14px;
+        line-height: 22px;
+      }
+    }
+  }
+
+  &--wrap {
+    align-items: unset;
+    background-color: $yellow-color-dark;
+    border-radius: 28px;
+    display: grid;
+    gap: unset;
+    grid-gap: 13px;
+    grid-template-areas:
+      "a b e"
+      "c d e";
+    grid-template-columns: 220px 220px 220px;
+    grid-template-rows: 220px 220px;
+    padding: 13px;
+
+    li {
+      display: flex;
+      flex-direction: column;
+      max-width: 100%;
+
+      &:nth-of-type(1) {
+        grid-area: a;
+      }
+
+      &:nth-of-type(2) {
+        grid-area: b;
+      }
+
+      &:nth-of-type(3) {
+        grid-area: c;
+      }
+
+      &:nth-of-type(4) {
+        grid-area: d;
+      }
+
+      &:nth-of-type(5) {
+        grid-area: e;
+      }
+
+      .image-card {
+        max-height: 100%;
+
+        &:hover {
+          cursor: pointer;
+          transform: translate(3px, -5px);
+        }
+
+        &__title {
+          font-size: 16px;
+          line-height: 20px;
+        }
+
+        &__description {
+          font-size: 9px;
+          line-height: 16px;
+        }
       }
     }
   }
