--- a/src/components/CommonSection/CommonSection.scss
+++ b/src/components/CommonSection/CommonSection.scss
@@ -44,12 +44,29 @@
     gap: 0;
   }
 
-  > img {
-    left: 50%;
-    height: 100%;
+  &__background {
     position: absolute;
-    transform: translate(-50%, 0);
     z-index: 0;
+
+    &--blue-small-spirals,
+    &--white-brushes-flipped {
+      height: 100%;
+      left: 50%;
+      transform: translate(-50%, 0);
+    }
+
+    &--blue-spiral,
+    &--grey-spiral {
+      top: 50%;
+      left: 50%;
+      transform: translate(-50%, -50%);
+      height: 100%;
+    }
+
+    &--yellow-brush {
+      left: 0;
+      top: 0;
+    }
   }
 
   &__container {
