fix: resolve header dropdown animation issue

--- a/src/components/Header/Dropdown/Dropdown.scss
+++ b/src/components/Header/Dropdown/Dropdown.scss
@@ -28,7 +28,7 @@
     left: -100px;
     max-width: max-content;
     position: absolute;
-    top: calc(100% - 10px);
+    top: calc(100% + 10px);
   }
 
   &__aside {
